--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,14 @@
 });
 
 </script>
+<script>
+  $(document).ready(function(){
+      elem = document.getElementById("eventDate")
+      var iso = new Date().toISOString();
+      var minDate = iso.substring(0,iso.length-1);
+      elem.value = minDate
+      elem.min = minDate
+  });
+  </script>
 </body>
 </html>
